corpus/labels.txt
===================
labels and comments
===================
direct
:before
after:
 :floating
 trouble:
direct;comment
:before;comment
after:;comment
	:floating;comment
	trouble:;comment
direct ;comment
:before ;comment
after: ;comment
	:floating ;comment
	trouble: ;comment

---
(source_file [0, 0] - [20, 0]
  (line [0, 0] - [0, 10]
    (comment [0, 0] - [0, 10]))
  (line [1, 0] - [1, 11]
    (comment [1, 0] - [1, 11]))
  (line [2, 0] - [2, 10]
    (comment [2, 0] - [2, 10]))
  (line [3, 0] - [3, 6]
    (label [3, 0] - [3, 6]
      (identifier [3, 0] - [3, 6])))
  (line [4, 0] - [4, 7]
    (label [4, 0] - [4, 7]
      (identifier [4, 1] - [4, 7])))
  (line [5, 0] - [5, 6]
    (label [5, 0] - [5, 6]
      (identifier [5, 0] - [5, 5])))
  (line [6, 0] - [6, 10]
    (label [6, 0] - [6, 10]
      (identifier [6, 2] - [6, 10])))
  (line [7, 0] - [7, 9]
    (label [7, 0] - [7, 9]
      (identifier [7, 1] - [7, 8])))
  (line [8, 0] - [8, 14]
    (label [8, 0] - [8, 6]
      (identifier [8, 0] - [8, 6]))
    (comment [8, 6] - [8, 14]))
  (line [9, 0] - [9, 15]
    (label [9, 0] - [9, 7]
      (identifier [9, 1] - [9, 7]))
    (comment [9, 7] - [9, 15]))
  (line [10, 0] - [10, 14]
    (label [10, 0] - [10, 6]
      (identifier [10, 0] - [10, 5]))
    (comment [10, 6] - [10, 14]))
  (line [11, 0] - [11, 18]
    (label [11, 0] - [11, 10]
      (identifier [11, 2] - [11, 10]))
    (comment [11, 10] - [11, 18]))
  (line [12, 0] - [12, 17]
    (label [12, 0] - [12, 9]
      (identifier [12, 1] - [12, 8]))
    (comment [12, 9] - [12, 17]))
  (line [13, 0] - [13, 15]
    (label [13, 0] - [13, 6]
      (identifier [13, 0] - [13, 6]))
    (comment [13, 6] - [13, 15]))
  (line [14, 0] - [14, 16]
    (label [14, 0] - [14, 7]
      (identifier [14, 1] - [14, 7]))
    (comment [14, 7] - [14, 16]))
  (line [15, 0] - [15, 15]
    (label [15, 0] - [15, 6]
      (identifier [15, 0] - [15, 5]))
    (comment [15, 6] - [15, 15]))
  (line [16, 0] - [16, 19]
    (label [16, 0] - [16, 10]
      (identifier [16, 2] - [16, 10]))
    (comment [16, 10] - [16, 19]))
  (line [17, 0] - [17, 18]
    (label [17, 0] - [17, 9]
      (identifier [17, 1] - [17, 8]))
    (comment [17, 9] - [17, 18]))
  (line [19, 0] - [19, 4]
    (comment [19, 0] - [19, 4])))
